WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40340
Zero-sized gradients should not be painted on the canvas.
https://bugs.webkit.org/show_bug.cgi?id=40340
Summary
Zero-sized gradients should not be painted on the canvas.
Enrico Ros
Reported
2010-06-08 15:52:52 PDT
HTML5 spec:
http://www.whatwg.org/specs/web-apps/current-work/#colors-and-styles
This change will make WebKit pass the following test:
http://philip.html5.org/tests/canvas/suite/tests/2d.gradient.interpolate.zerosize.html
Attachments
Proposed patch
(5.30 KB, patch)
2010-06-08 17:00 PDT
,
Enrico Ros
ariya.hidayat
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrico Ros
Comment 1
2010-06-08 17:00:10 PDT
Created
attachment 58198
[details]
Proposed patch
Ariya Hidayat
Comment 2
2010-06-09 11:29:46 PDT
Comment on
attachment 58198
[details]
Proposed patch LGTM.
Julien Chaffraix
Comment 3
2010-06-09 14:03:21 PDT
Landed the fix in
r60911
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug