WebCore: Fix drawing zero-sized gradients on Canvas. https://bugs.webkit.org/show_bug.cgi?id=40340

Patch by Enrico Ros <eros@codeaurora.org> on 2010-06-09
Reviewed by Ariya Hidayat.

HTML5 draft says that nothing must be painted if the gradient start
point equals the stop point.

This commit fixes the following canvas test:
http://philip.html5.org/tests/canvas/suite/tests/2d.gradient.interpolate.zerosize.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::fillRect): skip zero-sized linear gradients
* platform/graphics/Gradient.h:
(WebCore::Gradient::isRadial): made public
(WebCore::Gradient::isZeroSize): true if start == stop

LayoutTests: Fixed zero-sized gradients on canvas.
https://bugs.webkit.org/show_bug.cgi?id=40340

Patch by Enrico Ros <eros@codeaurora.org> on 2010-06-09
Reviewed by Ariya Hidayat.

* platform/mac/Skipped: Unskip the test that is passing now.
* platform/qt/Skipped: Unskip the test that is passing now.

Canonical link: https://commits.webkit.org/51926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60911 268f45cc-cd09-0410-ab3c-d52691b4dbfc